--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:3001",
   "secure": "false",
   "ignorePath": "true",
+  "homepage": "https://thapza101.github.io/publicPortfolio/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -18,7 +19,7 @@
     "react-scripts": "^4.0.0",
     "request": "^2.88.2"
   },
-  "homepage": "https://thapza101.github.io/",
+  
   "scripts": {
     "predeploy":"npm run build",
     "deploy":"gh-pages -d build",
