--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.1",
     "concurrently": "^5.3.0",
+    "font-awesome": "^4.7.0",
     "gh-pages": "^3.1.0",
     "react": "^16.13.1",
     "react-back-to-top-button": "0.0.14",
