--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "ignorePath": "true",
   "homepage": "https://mats-ti.github.io/publicPortfolio/",
   "dependencies": {
-    "3d-react-carousal": "^3.1.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "3d-react-carousal": "^3.1.0",
     "axios": "^0.21.1",
     "concurrently": "^5.3.0",
     "font-awesome": "^4.7.0",
@@ -18,6 +18,7 @@
     "react": "^16.13.1",
     "react-back-to-top-button": "0.0.14",
     "react-dom": "^16.13.1",
+    "react-grid-carousel": "^1.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.0",
     "react-spring-3d-carousel": "^1.2.0",
@@ -48,7 +49,6 @@
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
-  "devDependencies": {},
   "author": "",
   "license": "ISC"
 }
